@@ -2,6 +2,6 @@ package com.jacob.backend.responses.exceptions;
 
 public class InvalidCredentialsException extends RuntimeException {
     public InvalidCredentialsException(String field) {
-        super(String.format("Invalid %s", field));
+        super("Invalid %s".formatted(field));
     }
 }
